--- a/app/src/main/res/layout/activity_store_detail.xml
+++ b/app/src/main/res/layout/activity_store_detail.xml
@@ -19,13 +19,10 @@
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/line"/>
-           <ImageView
+           <com.youth.banner.Banner
+               android:id="@+id/banner_discover_service"
                android:layout_width="match_parent"
-               android:layout_height="@dimen/dp_170"
-               android:layout_marginLeft="@dimen/dp_12"
-               android:layout_marginRight="@dimen/dp_12"
-               />
-
+               android:layout_height="@dimen/dp_170" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_78">
