--- a/app/src/main/res/layout/fragment_buy_gift.xml
+++ b/app/src/main/res/layout/fragment_buy_gift.xml
@@ -2,11 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="com.zthx.npj.ui.fragment.BuyGiftFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/fg_buy_gift_rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
