--- a/app/src/main/res/layout/fragment_spokesman.xml
+++ b/app/src/main/res/layout/fragment_spokesman.xml
@@ -2,11 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context="com.zthx.npj.ui.fragment.SpokesmanFragment">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/fg_spokesman_rv"></android.support.v7.widget.RecyclerView>
+        android:id="@+id/fg_spokesman_rv"/>
 
 </FrameLayout>
