--- a/app/src/main/res/layout/popupwindow_goods_size.xml
+++ b/app/src/main/res/layout/popupwindow_goods_size.xml
@@ -10,8 +10,11 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_75"
-        >
+        android:layout_height="@dimen/dp_95">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_20"
+            android:background="#777777"/>
         <ImageView
             android:id="@+id/pop_goods_size_iv_pic"
             android:layout_width="@dimen/dp_80"
@@ -19,7 +22,6 @@
             android:layout_marginBottom="@dimen/dp_10"
             android:layout_marginLeft="@dimen/dp_12"
             android:src="@mipmap/ic_launcher"/>
-        
         <TextView
             android:id="@+id/pop_goods_size_tv_price"
             android:layout_width="wrap_content"
@@ -29,7 +31,7 @@
             android:textSize="@dimen/sp_14"
             android:layout_toRightOf="@id/pop_goods_size_iv_pic"
             android:layout_marginLeft="@dimen/dp_14"
-            android:layout_marginTop="@dimen/dp_10"/>
+            android:layout_marginTop="@dimen/dp_30"/>
 
         <TextView
             android:id="@+id/pop_goods_size_tv_total_num"
@@ -61,7 +63,7 @@
             android:background="@drawable/gray_conner"
             android:layout_toRightOf="@id/pop_goods_size_tv_price"
             android:text="会员价255"
-            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_30"
             android:layout_marginLeft="@dimen/dp_10"
             android:textSize="@dimen/sp_12"
             android:textColor="@android:color/white"/>
@@ -84,7 +86,7 @@
             android:layout_width="@dimen/dp_22"
             android:layout_height="@dimen/dp_22"
             android:layout_alignParentRight="true"
-            android:layout_marginTop="@dimen/dp_4"
+            android:layout_marginTop="@dimen/dp_24"
             android:layout_marginRight="@dimen/dp_9"
             android:src="@drawable/pop_goods_detail_size_delete"/>
     </RelativeLayout>
