--- a/app/src/main/res/layout/activity_spokesman_rights2.xml
+++ b/app/src/main/res/layout/activity_spokesman_rights2.xml
@@ -115,6 +115,7 @@
                     android:textColor="@color/text3"/>
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/ac_spokesman_ll_myTeam"
                 android:layout_width="@dimen/dp_0"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
