--- a/app/src/main/res/layout/activity_my_achievement.xml
+++ b/app/src/main/res/layout/activity_my_achievement.xml
@@ -14,7 +14,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <RelativeLayout
+            <include layout="@layout/title_theme"/>
+            <!--<RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_64"
                 android:background="@color/app_theme">
@@ -41,67 +42,78 @@
                     android:layout_centerVertical="true"
                     android:src="@drawable/myachievement_more"
                     android:layout_marginRight="@dimen/dp_10"/>
-            </RelativeLayout>
+            </RelativeLayout>-->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/gray_conner"
+                android:layout_margin="@dimen/dp_7">
+                <RelativeLayout
+                    android:layout_margin="@dimen/dp_5"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_85"
+                    android:layout_marginTop="@dimen/dp_10"
+                    android:background="@drawable/white_conner_5"
+                    android:layout_marginLeft="@dimen/sp_12"
+                    android:layout_marginRight="@dimen/sp_12">
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/dp_85"
-                android:layout_marginTop="@dimen/dp_10"
-                android:background="@drawable/white_conner_5"
-                android:layout_marginLeft="@dimen/sp_12"
-                android:layout_marginRight="@dimen/sp_12">
+                    <com.zthx.npj.view.MyCircleView
+                        android:id="@+id/at_my_achievement_head_pic"
+                        android:layout_width="@dimen/dp_55"
+                        android:layout_height="@dimen/dp_55"
+                        android:src="@drawable/logo"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="@dimen/dp_15"/>
 
-                <com.zthx.npj.view.MyCircleView
-                    android:id="@+id/at_my_achievement_head_pic"
-                    android:layout_width="@dimen/dp_55"
-                    android:layout_height="@dimen/dp_55"
-                    android:src="@mipmap/ic_launcher"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/dp_15"/>
+                    <TextView
+                        android:id="@+id/at_my_achievement_tv_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/at_my_achievement_head_pic"
+                        android:text="推荐人：不醉不会"
+                        android:textSize="@dimen/sp_15"
+                        android:textColor="@color/text3"
+                        android:layout_marginTop="@dimen/dp_23"
+                        android:layout_marginLeft="@dimen/dp_10"/>
 
-                <TextView
-                    android:id="@+id/at_my_achievement_tv_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/at_my_achievement_head_pic"
-                    android:text="推荐人：不醉不会"
-                    android:textSize="@dimen/sp_15"
-                    android:textColor="@color/text3"
-                    android:layout_marginTop="@dimen/dp_23"
-                    android:layout_marginLeft="@dimen/dp_10"/>
+                    <TextView
+                        android:id="@+id/ac_myAchievement_tv_level"
+                        android:layout_width="@dimen/dp_80"
+                        android:layout_height="@dimen/dp_23"
+                        android:text="VIP代言人"
+                        android:layout_toRightOf="@id/at_my_achievement_head_pic"
+                        android:layout_below="@id/at_my_achievement_tv_name"
+                        android:layout_marginLeft="@dimen/dp_10"
+                        android:background="@drawable/bg_daiyanren"
+                        android:gravity="center"
+                        android:textColor="@android:color/white"
+                        android:layout_marginTop="@dimen/dp_5"
+                        android:textSize="@dimen/sp_12"/>
 
-                <TextView
-                    android:layout_width="@dimen/dp_80"
-                    android:layout_height="@dimen/dp_23"
-                    android:text="VIP代言人"
-                    android:layout_toRightOf="@id/at_my_achievement_head_pic"
-                    android:layout_below="@id/at_my_achievement_tv_name"
-                    android:layout_marginLeft="@dimen/dp_10"
-                    android:background="@drawable/bg_daiyanren"
-                    android:gravity="center"
-                    android:textColor="@android:color/white"
-                    android:textSize="@dimen/sp_12"/>
+                    <TextView
+                        android:id="@+id/at_my_achievement_tv_fudao"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="@dimen/dp_15"
+                        android:layout_marginTop="@dimen/dp_22"
+                        android:textSize="@dimen/sp_13"
+                        android:textColor="@color/text6"
+                        android:text="我辅导的人数:"/>
 
-                <TextView
-                    android:id="@+id/at_my_achievement_tv_fudao"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="@dimen/dp_15"
-                    android:layout_marginTop="@dimen/dp_22"
-                    android:textSize="@dimen/sp_13"
-                    android:textColor="@color/text6"
-                    android:text="我辅导的人数:"/>
+                    <TextView
+                        android:id="@+id/ac_myAchievement_tv_totalMyTeam"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/at_my_achievement_tv_fudao"
+                        android:layout_alignRight="@id/at_my_achievement_tv_fudao"
+                        android:text="128"
+                        android:textSize="@dimen/sp_13"
+                        android:layout_marginTop="@dimen/dp_8"
+                        android:textColor="@color/text6"/>
+                </RelativeLayout>
+            </LinearLayout>
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/at_my_achievement_tv_fudao"
-                    android:layout_alignRight="@id/at_my_achievement_tv_fudao"
-                    android:text="128"
-                    android:textSize="@dimen/sp_13"
-                    android:textColor="@color/text6"/>
-            </RelativeLayout>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -142,7 +154,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="下一等级:"
+                        android:text="当前等级:"
                         android:textSize="@dimen/sp_13"
                         android:textColor="@android:color/white"
                         />
@@ -175,23 +187,19 @@
                         android:src="@drawable/gold_daiyanren"
                         android:layout_marginLeft="@dimen/dp_13"/>
                 </LinearLayout>
-
-                <View
+                <ProgressBar
                     android:id="@+id/at_my_achievement_view_all"
-                    android:layout_width="@dimen/dp_252"
+                    android:layout_width="@dimen/dp_250"
                     android:layout_height="@dimen/dp_12"
-                    android:background="@android:color/white"
+                    android:minHeight="@dimen/dp_12"
+                    android:maxHeight="@dimen/dp_12"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:progressDrawable="@drawable/activity_progress_bar"
+                    android:progress="24"
+                    android:max="30"
                     android:layout_centerHorizontal="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="@dimen/dp_29"></View>
-                <View
-                    android:id="@+id/at_my_achievement_view_done"
-                    android:layout_width="@dimen/dp_200"
-                    android:layout_height="@dimen/dp_12"
-                    android:layout_alignLeft="@id/at_my_achievement_view_all"
-                    android:background="@color/app_theme"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="@dimen/dp_29"></View>
+                    android:layout_marginBottom="@dimen/dp_29"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -208,13 +216,12 @@
                     android:layout_height="@dimen/dp_23"
                     android:background="@drawable/myachievement_done_bg"
                     android:layout_above="@id/at_my_achievement_view_all"
-                    android:layout_toRightOf="@id/at_my_achievement_view_done"
                     android:text="24人"
                     android:textSize="@dimen/sp_12"
                     android:textColor="@color/text3"
                     android:gravity="center"
                     android:paddingBottom="@dimen/dp_5"
-                    android:layout_marginLeft="-11dp"
+                    android:layout_marginLeft="240dp"
                     android:layout_marginBottom="@dimen/dp_3"/>
             </RelativeLayout>
 
@@ -238,7 +245,7 @@
                 android:layout_height="@dimen/dp_37"
                 android:background="@drawable/theme_conner_5"
                 android:layout_gravity="center_horizontal"
-                android:text="申请升级代言人"
+                android:text="申请升级股东代言人"
                 android:textSize="@dimen/sp_15"
                 android:textColor="@android:color/white"
                 android:layout_marginTop="@dimen/dp_10"/>
@@ -262,7 +269,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="下一等级:"
+                        android:text="当前等级:"
                         android:textSize="@dimen/sp_13"
                         android:textColor="@android:color/white"
                         />
@@ -295,24 +302,19 @@
                         android:src="@drawable/gold_daiyanren"
                         android:layout_marginLeft="@dimen/dp_13"/>
                 </LinearLayout>
-
-                <View
+                <ProgressBar
                     android:id="@+id/at_my_achievement_view_all_2"
-                    android:layout_width="@dimen/dp_252"
+                    android:layout_width="@dimen/dp_250"
                     android:layout_height="@dimen/dp_12"
-                    android:background="@android:color/white"
+                    android:minHeight="@dimen/dp_12"
+                    android:maxHeight="@dimen/dp_12"
+                    style="?android:attr/progressBarStyleHorizontal"
+                    android:progressDrawable="@drawable/activity_progress_bar"
+                    android:progress="24"
+                    android:max="30"
                     android:layout_centerHorizontal="true"
                     android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="@dimen/dp_29"></View>
-                <View
-                    android:id="@+id/at_my_achievement_view_done_2"
-                    android:layout_width="@dimen/dp_200"
-                    android:layout_height="@dimen/dp_12"
-                    android:layout_alignLeft="@id/at_my_achievement_view_all_2"
-                    android:background="@color/app_theme"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginBottom="@dimen/dp_29"></View>
-
+                    android:layout_marginBottom="@dimen/dp_29"/>
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -328,13 +330,12 @@
                     android:layout_height="@dimen/dp_23"
                     android:background="@drawable/myachievement_done_bg"
                     android:layout_above="@id/at_my_achievement_view_all_2"
-                    android:layout_toRightOf="@id/at_my_achievement_view_done_2"
                     android:text="24人"
                     android:textSize="@dimen/sp_12"
                     android:textColor="@color/text3"
                     android:gravity="center"
                     android:paddingBottom="@dimen/dp_5"
-                    android:layout_marginLeft="-11dp"
+                    android:layout_marginLeft="240dp"
                     android:layout_marginBottom="@dimen/dp_3"/>
             </RelativeLayout>
 
@@ -352,11 +353,11 @@
                 android:textSize="@dimen/sp_16"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/dp_20"/>
-
             <Button
+                android:id="@+id/at_my_achievement_btn_daiyanren2"
                 android:layout_width="@dimen/dp_280"
                 android:layout_height="@dimen/dp_37"
-                android:background="@drawable/theme_conner_5"
+                android:background="@drawable/yellow_conner_5"
                 android:layout_gravity="center_horizontal"
                 android:text="申请城市代言人"
                 android:textSize="@dimen/sp_15"
