--- a/app/src/main/res/layout/item_ask_for_partner.xml
+++ b/app/src/main/res/layout/item_ask_for_partner.xml
@@ -1,51 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_60"
     android:layout_marginLeft="@dimen/dp_12"
-    android:layout_marginRight="@dimen/dp_12">
+    android:layout_marginRight="@dimen/dp_12"
+    android:orientation="vertical">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_58">
+        <com.zthx.npj.view.MyCircleView
+            android:id="@+id/item_ask_for_partner_head"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_40"
+            android:src="@mipmap/ic_launcher"
+            android:layout_centerVertical="true"
+            />
 
-    <com.zthx.npj.view.MyCircleView
-        android:id="@+id/item_ask_for_partner_head"
-        android:layout_width="@dimen/dp_40"
-        android:layout_height="@dimen/dp_40"
-        android:src="@mipmap/ic_launcher"
-        android:layout_centerVertical="true"
-        />
+        <TextView
+            android:id="@+id/item_ask_for_partner_tv_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="包子山"
+            android:textColor="@color/text3"
+            android:textSize="@dimen/sp_15"
+            android:layout_toRightOf="@id/item_ask_for_partner_head"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginTop="@dimen/dp_7"/>
 
-    <TextView
-        android:id="@+id/item_ask_for_partner_tv_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="包子山"
-        android:textColor="@color/text3"
-        android:textSize="@dimen/sp_15"
-        android:layout_toRightOf="@id/item_ask_for_partner_head"
-        android:layout_marginLeft="@dimen/dp_10"
-        android:layout_marginTop="@dimen/dp_13"/>
+        <TextView
+            android:id="@+id/item_ask_tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2019/05/07  15:03:05"
+            android:textSize="@dimen/sp_13"
+            android:textColor="@color/text6"
+            android:layout_marginTop="@dimen/dp_5"
+            android:layout_below="@id/item_ask_for_partner_tv_name"
+            android:layout_alignLeft="@id/item_ask_for_partner_tv_name"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="2019/05/07  15:03:05"
-        android:textSize="@dimen/sp_13"
-        android:textColor="@color/text6"
-        android:layout_below="@id/item_ask_for_partner_tv_name"
-        android:layout_alignLeft="@id/item_ask_for_partner_tv_name"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="等待审核"
-        android:background="@drawable/gray_conner_2"
-        android:layout_centerVertical="true"
-        android:layout_alignParentRight="true"
-        android:textColor="@color/app_theme"
-        android:textSize="@dimen/sp_15"
-        android:paddingBottom="@dimen/dp_6"
-        android:paddingTop="@dimen/dp_6"
-        android:paddingLeft="@dimen/dp_9"
-        android:paddingRight="@dimen/dp_9"/>
-
-</RelativeLayout>
+        <TextView
+            android:id="@+id/item_ask_tv_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="等待审核"
+            android:background="@drawable/gray_conner_2"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:textColor="@color/app_theme"
+            android:textSize="@dimen/sp_15"
+            android:paddingBottom="@dimen/dp_6"
+            android:paddingTop="@dimen/dp_6"
+            android:paddingLeft="@dimen/dp_9"
+            android:paddingRight="@dimen/dp_9"/>
+    </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_1"
+        android:background="@color/background"/>
+</LinearLayout>
