--- a/app/src/main/res/layout/activity_goods_detail.xml
+++ b/app/src/main/res/layout/activity_goods_detail.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.GoodsDetailActivity">
-
     <ScrollView
+        android:id="@+id/ac_goodsDetail_sv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentTop="true">
@@ -624,6 +624,7 @@
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/ac_goodsDetail_iv_share"
         android:layout_width="@dimen/dp_40"
         android:layout_height="@dimen/dp_40"
         android:layout_alignParentRight="true"
