--- a/app/src/main/res/layout/item_home_goods.xml
+++ b/app/src/main/res/layout/item_home_goods.xml
@@ -4,17 +4,19 @@
     android:layout_width="@dimen/dp_170"
     android:layout_height="@dimen/dp_257"
     android:orientation="vertical"
-    android:layout_marginTop="@dimen/dp_10"
+    android:layout_marginBottom="@dimen/dp_10"
     android:layout_marginLeft="@dimen/dp_12"
     android:background="@drawable/white_conner_8">
 
     <ImageView
         android:id="@+id/item_iv_home_goods"
-        android:layout_width="match_parent"
+        android:layout_width="@dimen/dp_160"
         android:layout_marginLeft="@dimen/dp_4"
         android:layout_marginRight="@dimen/dp_4"
         android:layout_height="@dimen/dp_170"
-        android:src="@mipmap/ic_launcher"/>
+        android:layout_marginTop="@dimen/dp_10"
+        android:adjustViewBounds="true"
+        android:src="@drawable/logo"/>
 
     <TextView
         android:id="@+id/item_tv_home_goods_title"
@@ -24,6 +26,8 @@
         android:layout_marginTop="@dimen/dp_5"
         android:layout_marginLeft="@dimen/dp_5"
         android:textColor="@color/goods_text_color"
+        android:lines="1"
+        android:ellipsize="end"
         android:textSize="@dimen/sp_15"/>
 
     <LinearLayout
@@ -51,35 +55,39 @@
     </LinearLayout>
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_15"
-        android:orientation="horizontal"
-        android:layout_marginTop="@dimen/dp_4"
-        android:background="#d4f1ee"
-        android:layout_marginLeft="@dimen/dp_5"
-        android:layout_marginRight="@dimen/dp_5">
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_15"
+            android:layout_marginTop="@dimen/dp_6"
+            android:background="@drawable/home_conner_12"
+            android:layout_marginLeft="@dimen/dp_12"
+            android:layout_marginRight="@dimen/dp_5">
+            <TextView
+                android:id="@+id/item_tv_home_goods_mall_name"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/dp_15"
+                android:text="@string/go_to_game"
+                android:textSize="@dimen/sp_12"
+                android:textColor="@color/app_theme"
+                android:layout_marginLeft="@dimen/dp_26"/>
 
-        <ImageView
+            <ImageView
+                android:layout_width="@dimen/dp_17"
+                android:layout_height="@dimen/dp_4"
+                android:src="@drawable/item_goods_more"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="@dimen/dp_5"/>
+        </RelativeLayout>
+        <com.zthx.npj.view.MyCircleView
             android:id="@+id/item_iv_home_goods_mall"
             android:layout_width="@dimen/dp_20"
             android:layout_height="@dimen/dp_20"
+            android:layout_marginLeft="@dimen/dp_4"
+            android:layout_marginTop="@dimen/dp_6"
+            android:layout_gravity="center"
             android:src="@mipmap/ic_launcher"/>
-        <TextView
-            android:id="@+id/item_tv_home_goods_mall_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/go_to_game"
-            android:textSize="@dimen/sp_12"
-            android:textColor="@color/app_theme"
-            android:layout_marginLeft="@dimen/dp_26"/>
-        
-        <ImageView
-            android:layout_width="@dimen/dp_17"
-            android:layout_height="@dimen/dp_4"
-            android:src="@drawable/item_goods_more"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/dp_5"/>
     </RelativeLayout>
-
-
 </LinearLayout>
