--- a/app/src/main/res/layout/activity_enterprise_certification.xml
+++ b/app/src/main/res/layout/activity_enterprise_certification.xml
@@ -13,8 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@color/white"
         android:layout_below="@id/title">
         <ImageView
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_140"
             android:src="@drawable/qiye_banner"/>
@@ -166,10 +168,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1.企业营业执照
-2.本人身份证，法人或授权人证明"
+                android:text="1.企业营业执照"
                 android:layout_marginLeft="@dimen/dp_12"
                 android:layout_marginTop="@dimen/dp_10"
+                android:textColor="@color/text3"
+                android:textSize="@dimen/sp_14"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2.本人身份证，法人或授权人证明"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_3"
                 android:textColor="@color/text3"
                 android:textSize="@dimen/sp_14"/>
         </LinearLayout>
@@ -206,6 +215,7 @@
         android:layout_above="@id/at_trust_bottom"
         android:layout_marginLeft="@dimen/dp_12"
         android:layout_marginRight="@dimen/dp_12"
+        android:layout_marginBottom="@dimen/dp_5"
         android:background="@drawable/theme_conner_5"
         android:text="开始认证"
         android:textColor="@android:color/white"
