--- a/app/src/main/res/layout/activity_real_name_authentication.xml
+++ b/app/src/main/res/layout/activity_real_name_authentication.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@color/white"
         android:layout_below="@id/title">
         <ImageView
             android:layout_width="match_parent"
@@ -151,10 +152,17 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="1.身份证正反照
-2.手持身份证照片"
+                android:text="1.身份证正反照"
                 android:layout_marginLeft="@dimen/dp_12"
                 android:layout_marginTop="@dimen/dp_10"
+                android:textColor="@color/text3"
+                android:textSize="@dimen/sp_14"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2.手持身份证照片"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_3"
                 android:textColor="@color/text3"
                 android:textSize="@dimen/sp_14"/>
         </LinearLayout>
@@ -187,6 +195,7 @@
     <Button
         android:id="@+id/at_real_name_authentication_btn_attestation"
         android:layout_width="match_parent"
+        android:layout_marginBottom="@dimen/dp_5"
         android:layout_height="@dimen/dp_40"
         android:layout_above="@id/at_trust_bottom"
         android:layout_marginLeft="@dimen/dp_12"
