--- a/app/src/main/res/layout/activity_my_bill.xml
+++ b/app/src/main/res/layout/activity_my_bill.xml
@@ -9,7 +9,6 @@
 
     <include
         layout="@layout/title"></include>
-
     <android.support.design.widget.TabLayout
         android:id="@+id/at_want_buy_manager_tab"
         android:layout_width="match_parent"
@@ -17,7 +16,7 @@
         android:background="@android:color/white"
         app:tabGravity="center"
         app:tabIndicatorColor="@color/app_theme"
-        app:tabMode="fixed"
+        app:tabMode="scrollable"
         app:tabSelectedTextColor="@color/app_theme"
         app:tabTextColor="@color/text3">
     </android.support.design.widget.TabLayout>
