--- a/app/src/main/res/layout/activity_sec_kill.xml
+++ b/app/src/main/res/layout/activity_sec_kill.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@android:color/white"
+    android:background="@color/background"
     android:orientation="vertical">
     <include layout="@layout/title"/>
     <android.support.design.widget.TabLayout
@@ -13,7 +13,7 @@
         android:background="@android:color/white"
         app:tabGravity="center"
         app:tabMode="fixed"
-        app:tabIndicatorHeight="0dp"
+        app:tabIndicatorHeight="2dp"
         app:tabSelectedTextColor="@color/app_theme"/>
     <android.support.v4.view.ViewPager
         android:layout_marginTop="@dimen/dp_10"
