--- a/app/src/main/res/layout/dialog_commom.xml
+++ b/app/src/main/res/layout/dialog_commom.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/white_conner_5"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="@dimen/dp_12"
+    android:layout_marginRight="@dimen/dp_12"
+    android:background="@drawable/white_conner_8"
     android:orientation="vertical" >
-
-
     <TextView
         android:id="@+id/content"
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
         android:layout_marginBottom="@dimen/dp_50"
         android:text=""
         android:textSize="@dimen/sp_15"
-        android:textColor="@color/app_theme"/>
+        android:textColor="@color/text6"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -28,35 +28,32 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal">
-
+        android:background="@drawable/white_conner_8"
+        android:orientation="horizontal"
+        android:gravity="center">
         <TextView
             android:id="@+id/submit"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:layout_weight="1.0"
             android:gravity="center"
             android:text="确认"
             android:textSize="@dimen/sp_15"
-            android:textColor="@color/text6"/>
-
+            android:textColor="@color/app_theme"/>
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
             android:background="@color/background"/>
-
         <TextView
             android:id="@+id/cancel"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:gravity="center"
             android:layout_weight="1.0"
             android:text="取消"
             android:textSize="12sp"
-            android:textColor="@color/text6"/>
-
+            android:textColor="@color/app_theme"/>
     </LinearLayout>
-
 </LinearLayout>
