--- a/app/src/main/res/layout/activity_baojia_detail.xml
+++ b/app/src/main/res/layout/activity_baojia_detail.xml
@@ -1,132 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background"
     android:orientation="vertical">
-    <include layout="@layout/title_theme"/>
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_110">
-        <com.zthx.npj.view.MyCircleView
-            android:id="@+id/ac_baojia_detail_mv_headImg"
-            android:layout_width="@dimen/dp_60"
-            android:layout_height="@dimen/dp_60"
-            android:src="@mipmap/ic_launcher"
-            android:layout_marginLeft="@dimen/dp_12"
-            android:layout_marginTop="@dimen/dp_10" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <include layout="@layout/title_theme"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_110"
+            android:background="@color/white">
+            <com.zthx.npj.view.MyCircleView
+                android:id="@+id/ac_baojia_detail_mv_headImg"
+                android:layout_width="@dimen/dp_60"
+                android:layout_height="@dimen/dp_60"
+                android:src="@mipmap/ic_launcher"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_10" />
+            <TextView
+                android:id="@+id/ac_baojia_detail_tv_nickName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="初夏有乔木"
+                android:textSize="@dimen/sp_15"
+                android:textColor="@color/text3"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_toRightOf="@id/ac_baojia_detail_mv_headImg"
+                android:layout_marginTop="@dimen/dp_10"/>
+
+            <ImageView
+                android:id="@+id/ac_baojia_detail_tv_level"
+                android:layout_width="@dimen/dp_80"
+                android:layout_height="@dimen/dp_23"
+                android:text="金牌代言人"
+                android:gravity="center"
+                android:textColor="@android:color/white"
+                android:textSize="@dimen/sp_12"
+                android:layout_toRightOf="@id/ac_baojia_detail_tv_nickName"
+                android:layout_marginTop="@dimen/dp_8"
+                android:layout_marginLeft="@dimen/dp_10"/>
+
+            <TextView
+                android:id="@+id/ac_baojia_tv_seeInfo"
+                android:layout_width="@dimen/dp_65"
+                android:layout_height="@dimen/dp_17"
+                android:text="查看名片"
+                android:gravity="center"
+                android:textSize="@dimen/sp_13"
+                android:textColor="@color/text6"
+                android:background="@drawable/stroke_gray_10"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_12"/>
+
+            <TextView
+                android:id="@+id/ac_baojia_detail_tv_day"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="已持续经营365天"
+                android:textColor="@color/text6"
+                android:textSize="@dimen/sp_13"
+                android:layout_below="@id/ac_baojia_detail_tv_nickName"
+                android:layout_alignLeft="@id/ac_baojia_detail_tv_nickName"
+                android:layout_marginTop="@dimen/dp_10"/>
+
+            <LinearLayout
+                android:id="@+id/item_quotation_people_ll"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_below="@id/ac_baojia_detail_mv_headImg"
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_5">
+                <TextView
+                    android:layout_width="@dimen/dp_55"
+                    android:layout_height="@dimen/dp_15"
+                    android:text="实人认证"
+                    android:gravity="center"
+                    android:textSize="@dimen/sp_11"
+                    android:textColor="@android:color/white"
+                    android:background="#4FA0F1"/>
+
+                <TextView
+                    android:layout_width="@dimen/dp_55"
+                    android:layout_height="@dimen/dp_15"
+                    android:text="企业认证"
+                    android:gravity="center"
+                    android:textSize="@dimen/sp_11"
+                    android:textColor="@android:color/white"
+                    android:background="#F39B1F"
+                    android:layout_marginLeft="@dimen/dp_10"/>
+
+                <TextView
+                    android:layout_width="@dimen/dp_55"
+                    android:layout_height="@dimen/dp_15"
+                    android:text="诚信认证"
+                    android:gravity="center"
+                    android:textSize="@dimen/sp_11"
+                    android:textColor="@android:color/white"
+                    android:background="#EB6877"
+                    android:layout_marginLeft="@dimen/dp_10"/>
+
+                <TextView
+                    android:layout_width="@dimen/dp_55"
+                    android:layout_height="@dimen/dp_15"
+                    android:text="采购认证"
+                    android:gravity="center"
+                    android:textSize="@dimen/sp_11"
+                    android:textColor="@android:color/white"
+                    android:background="#8576E3"
+                    android:layout_marginLeft="@dimen/dp_10"/>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_10"
+                android:background="@color/background"
+                android:layout_alignParentBottom="true"></View>
+        </RelativeLayout>
         <TextView
-            android:id="@+id/ac_baojia_detail_tv_nickName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="初夏有乔木"
-            android:textSize="@dimen/sp_15"
-            android:textColor="@color/text3"
-            android:layout_marginLeft="@dimen/dp_10"
-            android:layout_toRightOf="@id/ac_baojia_detail_mv_headImg"
-            android:layout_marginTop="@dimen/dp_10"/>
-
-        <ImageView
-            android:id="@+id/ac_baojia_detail_tv_level"
-            android:layout_width="@dimen/dp_80"
-            android:layout_height="@dimen/dp_23"
-            android:text="金牌代言人"
-            android:gravity="center"
-            android:textColor="@android:color/white"
-            android:textSize="@dimen/sp_12"
-            android:background="@drawable/bg_daiyanren"
-            android:layout_toRightOf="@id/ac_baojia_detail_tv_nickName"
-            android:layout_marginTop="@dimen/dp_8"
-            android:layout_marginLeft="@dimen/dp_10"/>
-
+            android:layout_gravity="center"
+            android:text="产品报价"
+            android:textSize="@dimen/sp_16"
+            android:textColor="@color/app_theme"
+            android:layout_marginTop="@dimen/dp_13"
+            android:layout_marginBottom="@dimen/dp_12"/>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/ac_baojia_detail_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_90"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true">
         <TextView
-            android:layout_width="@dimen/dp_65"
-            android:layout_height="@dimen/dp_17"
-            android:text="查看名片"
-            android:gravity="center"
-            android:textSize="@dimen/sp_13"
-            android:textColor="@color/text6"
-            android:background="@drawable/stroke_gray_10"
-            android:layout_alignParentRight="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="*以上是该商家的报价情况，您可直接点下方联系卖家进行价格确认和商品发布等其它沟通事项确认!"
+            android:layout_marginLeft="@dimen/dp_12"
             android:layout_marginRight="@dimen/dp_12"
-            android:layout_marginTop="@dimen/dp_12"/>
-
-        <TextView
-            android:id="@+id/ac_baojia_detail_tv_day"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="已持续经营365天"
-            android:textColor="@color/text6"
-            android:textSize="@dimen/sp_13"
-            android:layout_below="@id/ac_baojia_detail_tv_nickName"
-            android:layout_alignLeft="@id/ac_baojia_detail_tv_nickName"
-            android:layout_marginTop="@dimen/dp_10"/>
-
-        <LinearLayout
-            android:id="@+id/item_quotation_people_ll"
+            android:layout_marginTop="@dimen/dp_10"
+            android:textSize="@dimen/sp_12"
+            android:lineHeight="@dimen/dp_18"
+            android:textColor="@color/text6" />
+        <Button
+            android:id="@+id/ac_baojia_btn_chat"
+            android:layout_marginTop="@dimen/dp_5"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_below="@id/ac_baojia_detail_mv_headImg"
-            android:layout_marginLeft="@dimen/dp_12"
-            android:layout_marginTop="@dimen/dp_5">
-            <TextView
-                android:layout_width="@dimen/dp_55"
-                android:layout_height="@dimen/dp_15"
-                android:text="实人认证"
-                android:gravity="center"
-                android:textSize="@dimen/sp_11"
-                android:textColor="@android:color/white"
-                android:background="#4FA0F1"/>
-
-            <TextView
-                android:layout_width="@dimen/dp_55"
-                android:layout_height="@dimen/dp_15"
-                android:text="企业认证"
-                android:gravity="center"
-                android:textSize="@dimen/sp_11"
-                android:textColor="@android:color/white"
-                android:background="#F39B1F"
-                android:layout_marginLeft="@dimen/dp_10"/>
-
-            <TextView
-                android:layout_width="@dimen/dp_55"
-                android:layout_height="@dimen/dp_15"
-                android:text="诚信认证"
-                android:gravity="center"
-                android:textSize="@dimen/sp_11"
-                android:textColor="@android:color/white"
-                android:background="#EB6877"
-                android:layout_marginLeft="@dimen/dp_10"/>
-
-            <TextView
-                android:layout_width="@dimen/dp_55"
-                android:layout_height="@dimen/dp_15"
-                android:text="采购认证"
-                android:gravity="center"
-                android:textSize="@dimen/sp_11"
-                android:textColor="@android:color/white"
-                android:background="#8576E3"
-                android:layout_marginLeft="@dimen/dp_10"/>
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_10"
-            android:background="@color/background"
-            android:layout_alignParentBottom="true"></View>
-    </RelativeLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="产品报价"
-        android:textSize="@dimen/sp_16"
-        android:textColor="@color/app_theme"
-        android:layout_marginTop="@dimen/dp_13"
-        android:layout_marginBottom="@dimen/dp_12"/>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/ac_baojia_detail_rv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</LinearLayout>
+            android:layout_height="@dimen/dp_40"
+            android:background="@color/app_theme"
+            android:text="联系他还价"
+            android:textColor="@color/white"
+            android:textSize="@dimen/sp_15"/>
+    </LinearLayout>
+</RelativeLayout>
