--- a/app/src/main/res/layout/activity_baojia_userlist.xml
+++ b/app/src/main/res/layout/activity_baojia_userlist.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-    <include layout="@layout/title_theme"
-        android:id="@+id/ac_address_in_title"/>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <include layout="@layout/title_theme"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_10"
+        android:background="@color/background"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/ac_baojia_userlist_rv"
+        android:background="@color/background"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/ac_address_in_title"
-        android:layout_above="@id/ac_address_addAddress"/>
-</RelativeLayout>
+        android:layout_height="match_parent"/>
+</LinearLayout>
