--- a/app/src/main/res/layout/activity_release_supply.xml
+++ b/app/src/main/res/layout/activity_release_supply.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical"
     tools:context="com.zthx.npj.ui.ReleaseSupplyActivity">
 
@@ -12,7 +13,7 @@
     <LinearLayout
         android:visibility="visible"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_155"
+        android:layout_height="@dimen/dp_115"
         android:orientation="vertical"
         android:background="@color/background">
         <LinearLayout
@@ -78,18 +79,6 @@
 
             </LinearLayout>
         </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dp_1"
-            android:background="#cccccc"></View>
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@null"
-            android:text="取消发布"
-            android:textSize="@dimen/sp_13"
-            android:textColor="@color/text9"/>
     </LinearLayout>
 
 </LinearLayout>
