--- a/app/src/main/res/layout/activity_want_buy_manager.xml
+++ b/app/src/main/res/layout/activity_want_buy_manager.xml
@@ -8,40 +8,43 @@
 
     <include
         layout="@layout/title_theme"></include>
-
     <LinearLayout
-        android:layout_width="@dimen/dp_231"
-        android:layout_height="@dimen/dp_30"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/dp_11"
-        android:background="@drawable/stroke_app_theme"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/ac_wantBuy_tv_wantBuy"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_margin="@dimen/dp_3"
-            android:textColor="@android:color/white"
-            android:text="求购列表"
-            android:textSize="@dimen/sp_16"
-            android:background="@color/app_theme"
-            android:gravity="center"/>
-        <TextView
-            android:id="@+id/ac_wantBuy_tv_baojia"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_margin="@dimen/dp_3"
-            android:textColor="@color/text3"
-            android:text="商家报价"
-            android:textSize="@dimen/sp_16"
-            android:background="@android:color/white"
-            android:gravity="center"/>
-
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="@dimen/dp_231"
+            android:layout_height="@dimen/dp_30"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginBottom="@dimen/dp_10"
+            android:background="@drawable/stroke_app_theme"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/ac_wantBuy_tv_wantBuy"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_margin="@dimen/dp_3"
+                android:textColor="@android:color/white"
+                android:text="求购列表"
+                android:textSize="@dimen/sp_16"
+                android:background="@color/app_theme"
+                android:gravity="center"/>
+            <TextView
+                android:id="@+id/ac_wantBuy_tv_baojia"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:layout_margin="@dimen/dp_3"
+                android:textColor="@color/text3"
+                android:text="商家报价"
+                android:textSize="@dimen/sp_16"
+                android:background="@android:color/white"
+                android:gravity="center"/>
+        </LinearLayout>
     </LinearLayout>
-
     <LinearLayout
         android:visibility="visible"
         android:id="@+id/at_want_buy_manager_ll_supply_list"
@@ -51,42 +54,48 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="@dimen/dp_100"
-            android:layout_marginRight="@dimen/dp_100"
-            android:layout_marginTop="@dimen/dp_15">
-            <TextView
-                android:id="@+id/ac_wantBuy_tv_issue"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+            android:background="@color/white"
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="发布中"
-                android:gravity="center"
-                android:textSize="@dimen/sp_14"
-                android:textColor="@color/app_theme"/>
-            <TextView
-                android:id="@+id/ac_wantBuy_tv_unIssue"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="已下架"
-                android:gravity="center"
-                android:textSize="@dimen/sp_14"
-                android:textColor="@color/text3"/>
+                android:orientation="horizontal"
+                android:layout_marginLeft="@dimen/dp_100"
+                android:layout_marginRight="@dimen/dp_100"
+                android:layout_marginBottom="@dimen/dp_10">
+                <TextView
+                    android:id="@+id/ac_wantBuy_tv_issue"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="发布中"
+                    android:gravity="center"
+                    android:textSize="@dimen/sp_14"
+                    android:textColor="@color/app_theme"/>
+                <TextView
+                    android:id="@+id/ac_wantBuy_tv_unIssue"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="wrap_content"
+                    android:text="已下架"
+                    android:gravity="center"
+                    android:textSize="@dimen/sp_14"
+                    android:textColor="@color/text3"/>
+            </LinearLayout>
         </LinearLayout>
-
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_10"
-            android:background="@color/background"
-            android:layout_marginTop="@dimen/dp_10"></View>
+            android:background="@color/background"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/at_want_buy_manager_rv_supply_list1"
+            android:background="@color/background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/at_swant_buy_manager_rv_supply_list2"
+            android:background="@color/background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
     </LinearLayout>
@@ -100,11 +109,11 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_10"
-            android:background="@color/background"
-            android:layout_marginTop="@dimen/dp_10"></View>
+            android:background="@color/background"/>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/at_want_buy_manager_rv_supply_bill"
+            android:background="@color/background"
             android:layout_width="match_parent"
             android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
     </LinearLayout>
