--- a/app/src/main/res/layout/item_baojia_detail.xml
+++ b/app/src/main/res/layout/item_baojia_detail.xml
@@ -6,6 +6,7 @@
     android:layout_marginLeft="@dimen/dp_12"
     android:layout_marginRight="@dimen/dp_12"
     android:layout_marginBottom="@dimen/dp_15"
+    android:layout_marginTop="@dimen/dp_10"
     android:orientation="vertical"
     android:background="@drawable/white_conner_8">
     <TextView
@@ -27,7 +28,7 @@
         <TextView
             android:id="@+id/item_baojia_detail_tv_content"
             android:layout_width="@dimen/dp_160"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/dp_100"
             android:layout_margin="@dimen/dp_15"
             android:lineHeight="@dimen/dp_23"
             android:text="火龙果：4000元/吨
