--- a/app/src/main/res/layout/item_discover_supply.xml
+++ b/app/src/main/res/layout/item_discover_supply.xml
@@ -118,6 +118,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="￥1.3"
+                android:textStyle="bold"
                 android:textColor="@color/app_theme"
                 android:textSize="@dimen/sp_15"/>
             <TextView
