--- a/app/src/main/res/layout/item_store_goods_bill.xml
+++ b/app/src/main/res/layout/item_store_goods_bill.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_166"
+    android:background="@color/white"
     android:orientation="vertical">
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_99">
@@ -95,7 +95,9 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_3"
+        android:layout_marginBottom="@dimen/dp_5">
         <TextView
             android:id="@+id/item_store_goods_bill_tv_orderTime"
             android:layout_width="wrap_content"
@@ -109,7 +111,7 @@
         <TextView
             android:id="@+id/item_store_goods_bill_tv_send"
             android:layout_width="@dimen/dp_50"
-            android:layout_height="@dimen/dp_16"
+            android:layout_height="@dimen/dp_18"
             android:text="发货"
             android:gravity="center"
             android:layout_alignParentRight="true"
@@ -121,7 +123,7 @@
         <TextView
             android:id="@+id/item_store_goods_bill_tv_drawaback"
             android:layout_width="@dimen/dp_50"
-            android:layout_height="@dimen/dp_16"
+            android:layout_height="@dimen/dp_18"
             android:text="退款"
             android:gravity="center"
             android:layout_alignParentRight="true"
@@ -132,12 +134,8 @@
             android:layout_centerVertical="true"
             android:visibility="gone"/>
     </RelativeLayout>
-
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_10"
-        android:background="@color/background"
-        android:layout_gravity="bottom"
-        android:layout_marginTop="@dimen/dp_10"></View>
-
+        android:background="@color/background"/>
 </LinearLayout>
