--- a/app/src/main/res/layout/item_store_goods_list.xml
+++ b/app/src/main/res/layout/item_store_goods_list.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_135"
+    android:background="@color/white"
     android:orientation="vertical">
-    
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_94">
@@ -75,54 +75,65 @@
         android:background="@color/background"
         android:layout_marginRight="@dimen/dp_12"
         android:layout_marginLeft="@dimen/dp_12"></View>
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="center_vertical">
-        <TextView
-            android:id="@+id/item_storeGoodsList_tv_onSale"
-            android:layout_width="@dimen/dp_60"
-            android:layout_height="@dimen/dp_20"
-            android:background="@drawable/stroke_theme_2"
-            android:text="上架"
-            android:textSize="@dimen/sp_14"
-            android:textColor="@color/app_theme"
-            android:gravity="center"
-            android:layout_marginLeft="@dimen/dp_32"/>
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="@dimen/dp_5"
+            android:layout_marginBottom="@dimen/dp_5"
+            android:gravity="center_vertical">
+            <TextView
+                android:id="@+id/item_storeGoodsList_tv_onSale"
+                android:layout_width="@dimen/dp_60"
+                android:layout_height="@dimen/dp_20"
+                android:background="@drawable/stroke_theme_2"
+                android:text="上架"
+                android:textSize="@dimen/sp_14"
+                android:textColor="@color/app_theme"
+                android:gravity="center"
+                android:layout_marginLeft="@dimen/dp_32"/>
 
-        <TextView
-            android:id="@+id/item_storeGoodsList_tv_share"
-            android:layout_width="@dimen/dp_60"
-            android:layout_height="@dimen/dp_20"
-            android:background="@drawable/stroke_theme_2"
-            android:text="分享"
-            android:textSize="@dimen/sp_14"
-            android:textColor="@color/app_theme"
-            android:gravity="center"
-            android:layout_marginLeft="@dimen/dp_24"/>
+            <TextView
+                android:id="@+id/item_storeGoodsList_tv_share"
+                android:layout_width="@dimen/dp_60"
+                android:layout_height="@dimen/dp_20"
+                android:background="@drawable/stroke_theme_2"
+                android:text="分享"
+                android:textSize="@dimen/sp_14"
+                android:textColor="@color/app_theme"
+                android:gravity="center"
+                android:layout_marginLeft="@dimen/dp_24"/>
 
-        <TextView
-            android:id="@+id/item_storeGoodsList_tv_edit"
-            android:layout_width="@dimen/dp_60"
-            android:layout_height="@dimen/dp_20"
-            android:background="@drawable/stroke_theme_2"
-            android:text="编辑"
-            android:textSize="@dimen/sp_14"
-            android:textColor="@color/app_theme"
-            android:gravity="center"
-            android:layout_marginLeft="@dimen/dp_24"/>
-        <TextView
-            android:id="@+id/item_storeGoodsList_tv_delete"
-            android:layout_width="@dimen/dp_60"
-            android:layout_height="@dimen/dp_20"
-            android:background="@drawable/stroke_gray_2"
-            android:text="删除"
-            android:textSize="@dimen/sp_14"
-            android:textColor="@color/text6"
-            android:gravity="center"
-            android:layout_marginLeft="@dimen/dp_24"/>
+            <TextView
+                android:id="@+id/item_storeGoodsList_tv_edit"
+                android:layout_width="@dimen/dp_60"
+                android:layout_height="@dimen/dp_20"
+                android:background="@drawable/stroke_theme_2"
+                android:text="编辑"
+                android:textSize="@dimen/sp_14"
+                android:textColor="@color/app_theme"
+                android:gravity="center"
+                android:layout_marginLeft="@dimen/dp_24"/>
+            <TextView
+                android:id="@+id/item_storeGoodsList_tv_delete"
+                android:layout_width="@dimen/dp_60"
+                android:layout_height="@dimen/dp_20"
+                android:background="@drawable/stroke_gray_2"
+                android:text="删除"
+                android:textSize="@dimen/sp_14"
+                android:textColor="@color/text6"
+                android:gravity="center"
+                android:layout_marginLeft="@dimen/dp_24"/>
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_10"
+            android:background="@color/background"/>
     </LinearLayout>
+
 
 </LinearLayout>
