--- a/app/src/main/res/layout/item_want_buy_list.xml
+++ b/app/src/main/res/layout/item_want_buy_list.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/dp_145"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -82,6 +83,7 @@
                 android:textSize="@dimen/sp_13"
                 />
             <TextView
+                android:id="@+id/item_wantBuy_tv_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="2000斤"
@@ -103,16 +105,18 @@
         android:orientation="horizontal"
         android:gravity="center_vertical">
         <Button
+            android:id="@+id/item_wantBuy_btn_sale"
             android:layout_width="@dimen/dp_0"
             android:layout_height="@dimen/dp_20"
             android:layout_weight="1"
             android:background="@drawable/stroke_theme_2"
-            android:text="编辑"
+            android:text="下架"
             android:textColor="@color/app_theme"
             android:textSize="@dimen/sp_14"
             android:gravity="center"
-            android:layout_marginLeft="@dimen/dp_32"/>
+            android:layout_marginLeft="@dimen/dp_24"/>
         <Button
+            android:id="@+id/item_wantBuy_btn_share"
             android:layout_width="@dimen/dp_0"
             android:layout_height="@dimen/dp_20"
             android:layout_weight="1"
@@ -123,21 +127,23 @@
             android:gravity="center"
             android:layout_marginLeft="@dimen/dp_24"/>
         <Button
+            android:id="@+id/item_wantBuy_btn_edit"
             android:layout_width="@dimen/dp_0"
             android:layout_height="@dimen/dp_20"
             android:layout_weight="1"
-            android:background="@drawable/stroke_gray_2"
-            android:text="下架"
-            android:textColor="@color/text6"
+            android:background="@drawable/stroke_theme_2"
+            android:text="编辑"
+            android:textColor="@color/app_theme"
             android:textSize="@dimen/sp_14"
             android:gravity="center"
-            android:layout_marginLeft="@dimen/dp_24"/>
+            android:layout_marginLeft="@dimen/dp_32"/>
         <Button
+            android:id="@+id/item_wantBuy_btn_delete"
             android:layout_width="@dimen/dp_0"
             android:layout_height="@dimen/dp_20"
             android:layout_weight="1"
             android:background="@drawable/stroke_gray_2"
-            android:text="编辑"
+            android:text="删除"
             android:textColor="@color/text6"
             android:textSize="@dimen/sp_14"
             android:gravity="center"
