--- a/app/src/main/res/layout/activity_supply_products.xml
+++ b/app/src/main/res/layout/activity_supply_products.xml
@@ -441,6 +441,8 @@
                     android:layout_marginBottom="@dimen/dp_20"
                     android:layout_marginLeft="@dimen/dp_12">
                     <TextView
+                        android:id="@+id/ac_supply_tv_company"
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="#F39B1F"
@@ -460,6 +462,8 @@
                         android:paddingRight="@dimen/dp_6"
                         android:layout_marginLeft="@dimen/dp_10"/>
                     <TextView
+                        android:id="@+id/ac_supply_tv_realName"
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="#EB6877"
